--- a/Sources/App/Modules/Blog/Templates/Admin/Links/List.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Links/List.html
@@ -27,7 +27,7 @@ tr {
 }
 #enddefine
 #define(toolbarRight):
-    <a href="/admin/blog/authors/#Request(parameter: "id")/">#svg("link")</a>
+    <a href="/admin/blog/authors/#Request(parameter: "id")/">#svg("user")</a>
 #enddefine
 #define(th):
     #var(link = nil)
