--- a/Sources/App/Modules/Admin/Templates/Form.html
+++ b/Sources/App/Modules/Admin/Templates/Form.html
@@ -1,18 +1,29 @@
 #define(toolbarCenter):
-    #if(edit.id != nil):Edit#else:Create#endif #(form.key)
+    #if(form.modelId != nil):Edit#else:Create#endif #(form.key)
 #enddefine
 #define(breadcrumb):
     #if(form.list != nil):
     <li><a href="#($req.url.path.trimLast())">#(form.list.capitalized())</a></li>
     #endif
 #enddefine
-
+#define(toolbarRight):
+    #evaluate(toolbarRightBefore ?? "")
+    #if(form.modelId != nil):
+    <td class="td:center"><a href="#($req.url.path)delete/?redirect=#($req.url.path)">#svg("trash")</a></td>
+    #endif
+#enddefine
 #define(body):
 <div id="form" class="wrapper w">
     <form id="#(form.key)-form" class="m:xl" method="post" action="#($req.url.path)"#if(form.multipart ?? false): enctype="multipart/form-data"#endif>
         #var(field = nil)
 
-        #(field = ["id": "id", "value": form.id])
+        #(field = ["id": "id", "value": form.modelId])
+        #inline("Admin/Fields/Hidden")
+
+        #(field = ["id": "formId", "value": form.id])
+        #inline("Admin/Fields/Hidden")
+
+        #(field = ["id": "formToken", "value": form.token])
         #inline("Admin/Fields/Hidden")
 
         #fields()
