--- a/Sources/App/Modules/Admin/Templates/TableActionButtons.html
+++ b/Sources/App/Modules/Admin/Templates/TableActionButtons.html
@@ -1,2 +1,2 @@
 <td class="td:center"><a href="#($req.url.path)#(item.id)/">#svg("edit-2")</a></td>
-<td class="td:center"><a id="#(item.id)" href="#" onClick="confirmDelete('#($req.url.path)', this.id);">#svg("trash")</a></td>
+<td class="td:center"><a href="#($req.url.path)#(item.id)/delete/?redirect=#($req.url.path)">#svg("trash")</a></td>
