--- a/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
@@ -1,21 +1,27 @@
-#define(toolbarRight):
-<li><a href="/admin/blog/authors/#Request(parameter: "id")">#svg("user")</a></li>
-<li><a href="/admin/blog/authors/#Request(parameter: "id")/links">#svg("link")</a></li>
+#define(toolbarLeft):
+    <a href="/admin/blog/authors/#Request(parameter: "id")">#svg("user")</a>
+    <a href="/admin/blog/authors/#Request(parameter: "id")/links">#svg("link")</a>
 #enddefine
 #define(fields):
     <input type="hidden" name="authorId" value="#Request(parameter: "id")">
     #var(field = nil)
 
-    #(field = ["id": "name", "required": true, "data": edit.name])
+    #(field = ["id": "name", "required": true, "data": fields.name])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "url", "required": true, "data": edit.url])
+    #(field = ["id": "url", "required": true, "data": fields.url])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "priority", "required": true, "data": edit.priority])
+    #(field = ["id": "priority", "required": true, "data": fields.priority])
     #inline("Admin/Fields/Text")
 
 #enddefine
 
-#let(form = ["list": "links", "key": "link", "id": edit.id, "multipart": true])
+#let(form = [
+    "list": "links",
+    "id": formId,
+    "token": formToken,
+    "modelId": fields.id,
+    "key": "link"
+])
 #inline("Admin/Form")
