--- a/Sources/App/Modules/Menu/Templates/Admin/Items/Edit.html
+++ b/Sources/App/Modules/Menu/Templates/Admin/Items/Edit.html
@@ -2,23 +2,29 @@
     <input type="hidden" name="menuId" value="#Request(parameter: "id")">
     #var(field = nil)
 
-    #(field = ["id": "icon", "data": edit.icon])
+    #(field = ["id": "icon", "data": fields.icon])
     #inline("Admin/Fields/Text")
     
-    #(field = ["id": "label", "required": true, "data": edit.label])
+    #(field = ["id": "label", "required": true, "data": fields.label])
     #inline("Admin/Fields/Text")
     
-    #(field = ["id": "url", "required": true, "data": edit.url])
+    #(field = ["id": "url", "required": true, "data": fields.url])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "priority", "required": true, "data": edit.priority])
+    #(field = ["id": "priority", "required": true, "data": fields.priority])
     #inline("Admin/Fields/Text")
     
-    #(field = ["id": "targetBlank", "label": "Open in new window?", "data": edit.targetBlank])
+    #(field = ["id": "targetBlank", "label": "Open in new window?", "data": fields.targetBlank])
     #inline("Admin/Fields/Selection")
 
 #enddefine
 
-#let(form = ["list": "items", "key": "item", "id": edit.id])
+#let(form = [
+    "list": "items",
+    "id": formId,
+    "token": formToken,
+    "modelId": fields.id,
+    "key": "item"
+])
 #inline("Admin/Form")
 
