--- a/Sources/App/Modules/Menu/Templates/Admin/Menus/Edit.html
+++ b/Sources/App/Modules/Menu/Templates/Admin/Menus/Edit.html
@@ -1,21 +1,28 @@
 #define(toolbarRight):
-    #if(edit.id != nil):
-    <a href="/admin/menu/menus/#(edit.id)/items">#svg("link")</a>
+    #if(fields.id != nil):
+    <a href="/admin/menu/menus/#(fields.id)/items">#svg("link")</a>
     #endif
 #enddefine
 
 #define(fields):
     #var(field = nil)
 
-    #(field = ["id": "handle", "required": true, "data": edit.handle])
+    #(field = ["id": "handle", "required": true, "data": fields.handle])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "name", "data": edit.name])
+    #(field = ["id": "name", "data": fields.name])
     #inline("Admin/Fields/Text")
 
-    #(field = ["id": "icon", "data": edit.icon])
+    #(field = ["id": "icon", "data": fields.icon])
     #inline("Admin/Fields/Text")
 
 #enddefine
-#let(form = ["list": "menus", "key": "menu", "id": edit.id])
+
+#let(form = [
+    "list": "menus",
+    "id": formId,
+    "token": formToken,
+    "modelId": fields.id,
+    "key": "menu"
+])
 #inline("Admin/Form")
